--- a/mobile/src/main/res/layout/nav_header_main.xml
+++ b/mobile/src/main/res/layout/nav_header_main.xml
@@ -32,4 +32,11 @@
         android:layout_height="wrap_content"
         android:text="android.studio@android.com" />
 
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/navAdView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id" />
+
 </LinearLayout>
