--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -19,8 +19,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main"
-        app:itemBackground="@drawable/drawer_item_bg"
-        app:menu="@menu/activity_main_drawer" />
+        app:itemBackground="@drawable/drawer_item_bg"/>
+
+    <!--app:headerLayout="@layout/nav_header_main_login"
+    app:menu="@menu/activity_main_drawer_login"-->
 
 </android.support.v4.widget.DrawerLayout>
