--- a/mobile/src/main/res/menu/activity_main_drawer_logout.xml
+++ b/mobile/src/main/res/menu/activity_main_drawer_logout.xml
@@ -5,6 +5,7 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_login"
             android:icon="@drawable/account_key"
             android:title="@string/nav_login" />
         <item
