--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimaryDark">#00695C</color>
     <color name="colorPrimary">#009688</color>
     <color name="colorAccent">#4DB6AC</color>
+    <color name="white">#FFFFFF</color>
+    <color name="fragment_title">#555</color>
 </resources>
