--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="fragment_title_text">28sp</dimen>
+    <dimen name="fragment_title_margin_top_btm">15dp</dimen>
+    <dimen name="fragment_title_margin_lft_rgt">15dp</dimen>
 </resources>
