--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -17,4 +17,17 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="FragmentTitle" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:textSize">@dimen/fragment_title_text</item>
+        <item name="android:layout_marginBottom">@dimen/fragment_title_margin_top_btm</item>
+        <item name="android:layout_marginTop">@dimen/fragment_title_margin_top_btm</item>
+        <item name="android:layout_marginLeft">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:layout_marginRight">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:textColor">@color/fragment_title</item>
+        <item name="android:shadowColor">@color/colorAccent</item>
+        <item name="android:shadowDx">-2</item>
+        <item name="android:shadowDy">2</item>
+        <item name="android:shadowRadius">10</item>
+    </style>
+
 </resources>
