--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -17,17 +17,62 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Activity" parent="AlertDialog.AppCompat.Light">
+        <item name="android:background">@color/whiteGray</item>
+    </style>
+
     <style name="FragmentTitle" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:textSize">@dimen/fragment_title_text</item>
-        <item name="android:layout_marginBottom">@dimen/fragment_title_margin_top_btm</item>
-        <item name="android:layout_marginTop">@dimen/fragment_title_margin_top_btm</item>
+        <item name="android:layout_marginBottom">@dimen/fragment_title_margin_btm</item>
+        <item name="android:layout_marginTop">@dimen/fragment_title_margin_top</item>
         <item name="android:layout_marginLeft">@dimen/fragment_title_margin_lft_rgt</item>
         <item name="android:layout_marginRight">@dimen/fragment_title_margin_lft_rgt</item>
-        <item name="android:textColor">@color/fragment_title</item>
-        <item name="android:shadowColor">@color/colorAccent</item>
+        <item name="android:textColor">@color/gray</item>
         <item name="android:shadowDx">-2</item>
         <item name="android:shadowDy">2</item>
         <item name="android:shadowRadius">10</item>
+    </style>
+
+    <style name="LineSeparator" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/clearGray</item>
+        <item name="android:layout_marginLeft">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:layout_marginRight">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:layout_marginBottom">20dp</item>
+    </style>
+
+    <style name="EditText" parent="AlertDialog.AppCompat.Light">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/border</item>
+        <item name="android:layout_marginLeft">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:layout_marginRight">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:padding">7dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
+    <style name="Button" parent="AlertDialog.AppCompat.Light">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginLeft">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:layout_marginRight">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
+    <style name="ButtonLink" parent="AlertDialog.AppCompat.Light">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@color/whiteGray</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginLeft">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:layout_marginRight">@dimen/fragment_title_margin_lft_rgt</item>
+        <item name="android:gravity">center_vertical|right</item>
     </style>
 
 </resources>
