--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -4,5 +4,10 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorAccent">#4DB6AC</color>
     <color name="white">#FFFFFF</color>
-    <color name="fragment_title">#555</color>
+    <color name="whiteGray">#FEFEFE</color>
+    <color name="clearGray">#DDD</color>
+    <color name="lightGray">#AAA</color>
+    <color name="gray">#777</color>
+    <color name="darkGray">#555</color>
+    <color name="black">#000</color>
 </resources>
