--- a/mobile/src/main/res/layout/fragment_user_sign_up.xml
+++ b/mobile/src/main/res/layout/fragment_user_sign_up.xml
@@ -1,13 +1,80 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.olivadevelop.rolermaster.activities.UserSignUpFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/FragmentTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/signup_user_title" />
+
+        <LinearLayout style="@style/LineSeparator" />
+
+        <EditText
+            android:id="@+id/signup_user"
+            style="@style/EditText"
+            android:hint="@string/signup_user_username" />
+
+        <EditText
+            android:id="@+id/signup_email"
+            style="@style/EditText"
+            android:hint="@string/signup_user_usermail"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/signup_pass"
+            style="@style/EditText"
+            android:hint="@string/signup_user_userpass" />
+
+        <LinearLayout
+            style="@style/LineSeparator"
+            android:layout_marginTop="10dp" />
+
+        <EditText
+            android:id="@+id/signup_name"
+            style="@style/EditText"
+            android:hint="@string/signup_user_name" />
+
+        <EditText
+            android:id="@+id/signup_lastname"
+            style="@style/EditText"
+            android:hint="@string/signup_user_lastname" />
+
+        <EditText
+            android:id="@+id/signup_birth"
+            style="@style/EditText"
+            android:hint="@string/signup_user_birthdate" />
+
+        <EditText
+            android:id="@+id/signup_phone"
+            style="@style/EditText"
+            android:hint="@string/signup_user_phone"
+            android:inputType="phone" />
+
+        <LinearLayout
+            android:id="@+id/layout_spiners"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Spinner
+                android:id="@+id/signup_user_country"
+                style="@style/Spinner" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnsignup"
+            style="@style/Button"
+            android:text="@string/signup_user_signup" />
+
+    </LinearLayout>
 
 </FrameLayout>
