--- a/mobile/src/main/res/layout/custom_spinner.xml
+++ b/mobile/src/main/res/layout/custom_spinner.xml
@@ -3,13 +3,29 @@
     style="@style/SpinnerInternal"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_spinnervalue"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="3dp"
-        android:textColor="@color/darkGray" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/spinner_key"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="3dp"
+            android:textColor="@color/darkGray" />
+
+        <TextView
+            android:id="@+id/spinner_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="30dp"
+            android:textColor="@color/darkGray" />
+    </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
