--- a/mobile/src/main/res/layout/compact_spinner.xml
+++ b/mobile/src/main/res/layout/compact_spinner.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/SpinnerInternal"
+    style="@style/SpinnerInternalCompact"
     android:orientation="vertical">
 
-
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -32,4 +31,5 @@
         android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
         android:background="@drawable/menu_down" />
+
 </RelativeLayout>
