--- a/mobile/src/main/res/layout/fragment_user_sign_up.xml
+++ b/mobile/src/main/res/layout/fragment_user_sign_up.xml
@@ -1,8 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Activity"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context="com.olivadevelop.rolermaster.activities.UserSignUpFragment">
 
     <LinearLayout
@@ -49,26 +47,50 @@
             android:hint="@string/signup_user_lastname" />
 
         <EditText
-            android:id="@+id/signup_birth"
-            style="@style/EditText"
-            android:hint="@string/signup_user_birthdate" />
-
-        <EditText
             android:id="@+id/signup_phone"
             style="@style/EditText"
             android:hint="@string/signup_user_phone"
             android:inputType="phone" />
 
+
         <LinearLayout
-            android:id="@+id/layout_spiners"
+            android:id="@+id/signup_spinners_birth"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="@dimen/fragment_title_margin_lft_rgt"
+            android:orientation="horizontal">
+            <!--<EditText
+                android:id="@+id/signup_birth"
+                style="@style/EditText"
+                android:hint="@string/signup_user_birthdate" />-->
 
             <Spinner
-                android:id="@+id/signup_user_country"
-                style="@style/Spinner" />
+                android:id="@+id/signup_user_birth1"
+                style="@style/SpinnerCompac" />
+
+            <LinearLayout style="@style/Separator" />
+
+            <Spinner
+                android:id="@+id/signup_user_birth2"
+                style="@style/SpinnerCompac" />
+
+            <LinearLayout style="@style/Separator" />
+
+            <Spinner
+                android:id="@+id/signup_user_birth3"
+                style="@style/SpinnerCompac" />
+
 
         </LinearLayout>
+
+        <Spinner
+            android:id="@+id/signup_user_country"
+            style="@style/Spinner" />
+
+        <Spinner
+            android:id="@+id/signup_user_gender"
+            style="@style/Spinner" />
 
         <Button
             android:id="@+id/btnsignup"
