--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="transparent">#00000000</color>
     <color name="colorPrimaryDark">#00695C</color>
     <color name="colorPrimary">#009688</color>
     <color name="colorAccent">#4DB6AC</color>
