--- a/mobile/src/main/res/layout/fragment_user_forgot_pass.xml
+++ b/mobile/src/main/res/layout/fragment_user_forgot_pass.xml
@@ -22,7 +22,7 @@
             android:hint="@string/signup_user_usermail" />
 
         <Button
-            android:id="@+id/btnRecovery"
+            android:id="@+id/btnRecovery1"
             style="@style/Button"
             android:text="@string/forgot_pass_btn" />
 
