--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="gray">#777</color>
     <color name="darkGray">#555</color>
     <color name="black">#000</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
