--- a/mobile/src/main/res/layout/app_bar_main.xml
+++ b/mobile/src/main/res/layout/app_bar_main.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include
+        <included
             android:id="@+id/content_layout"
             layout="@layout/content_main" />
 
