--- a/mobile/src/main/res/layout/app_bar_main.xml
+++ b/mobile/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.olivadevelop.rolermaster.MainActivity">
+    tools:context="com.olivadevelop.rolermaster.activities.HomeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -26,14 +26,15 @@
         ads:adSize="SMART_BANNER"
         ads:adUnitId="@string/banner_ad_unit_id" />
 
+    <include
+        android:id="@+id/content_layout"
+        layout="@layout/content_main" />
+
     <ScrollView
         android:id="@+id/mainScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <included
-            android:id="@+id/content_layout"
-            layout="@layout/content_main" />
 
     </ScrollView>
 
