--- a/mobile/src/main/res/layout/activity_splash.xml
+++ b/mobile/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.olivadevelop.rolermaster.activities.SplashActivity">
+    tools:context="com.olivadevelop.rolermaster.SplashActivity">
 
     <LinearLayout
         android:id="@+id/fullscreen_content"
@@ -32,8 +32,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/logo_splash"
-                android:tint="@color/colorPrimary"/>
+                android:tint="@color/colorPrimary"
+                app:srcCompat="@drawable/logo_splash" />
 
         </LinearLayout>
 
