--- a/mobile/src/main/res/layout/fragment_user_login.xml
+++ b/mobile/src/main/res/layout/fragment_user_login.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Activity"
-    tools:context="com.olivadevelop.rolermaster.activities.UserLoginFragment">
+    tools:context="com.olivadevelop.rolermaster.activities.fragments.UserLoginFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
