--- a/mobile/src/main/res/layout/app_bar_main.xml
+++ b/mobile/src/main/res/layout/app_bar_main.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:elevation="@dimen/fab_elevation"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </android.support.design.widget.AppBarLayout>
 
@@ -43,6 +44,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:elevation="5dp" />
+        app:elevation="@dimen/fab_elevation" />
 
 </android.support.design.widget.CoordinatorLayout>
