--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_elevation">5dp</dimen>
 
     <dimen name="fragment_title_text">24sp</dimen>
     <dimen name="fragment_title_margin_top">20dp</dimen>
