--- a/mobile/src/main/res/layout/activity_splash.xml
+++ b/mobile/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgSplash"
-    tools:context="com.olivadevelop.rolermaster.SplashActivity">
+    tools:context="com.olivadevelop.rolermaster.activities.SplashActivity">
 
     <LinearLayout
         android:id="@+id/fullscreen_content"
