--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -4,10 +4,15 @@
     <!--<color name="colorPrimaryDark">#00695C</color>
     <color name="colorPrimary">#009688</color>
     <color name="colorAccent">#4DB6AC</color>-->
-    <color name="bgSplash">#f7d0ae</color>
+    <!--<color name="bgSplash">#f7d0ae</color>
     <color name="colorPrimaryDark">#d75f14</color>
     <color name="colorPrimary">#e07c3a</color>
-    <color name="colorAccent">#f3a561</color>
+    <color name="colorAccent">#f3a561</color>-->
+    <color name="bgSplash">#c1d7d9</color>
+    <color name="colorPrimaryDark">#003742</color>
+    <color name="colorPrimary">#08606a</color>
+    <!--<color name="colorAccent">#82b0b3</color>-->
+    <color name="colorAccent">#ffa69d</color>
     <color name="white">#FFFFFF</color>
     <color name="whiteGray">#FEFEFE</color>
     <color name="clearGray">#DDD</color>
