--- a/mobile/src/main/res/layout/fragment_blank.xml
+++ b/mobile/src/main/res/layout/fragment_blank.xml
@@ -7,7 +7,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:alpha="1"
+        android:alpha=".5"
         android:contentDescription="@string/index_title"
         android:scaleType="centerCrop"
         android:src="@drawable/fondo" />
