--- a/mobile/src/main/res/layout/fragment_blank.xml
+++ b/mobile/src/main/res/layout/fragment_blank.xml
@@ -3,12 +3,43 @@
     style="@style/Activity"
     tools:context="com.olivadevelop.rolermaster.activities.fragments.BlankFragment">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:alpha=".5"
-        android:contentDescription="@string/index_title"
-        android:scaleType="centerCrop"
-        android:src="@drawable/fondo" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:alpha=".5"
+            android:contentDescription="@string/index_title"
+            android:scaleType="centerCrop"
+            android:src="@drawable/fondo" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="104dp"
+            android:gravity="center_horizontal"
+            android:paddingLeft="@dimen/fragment_title_margin_lft_rgt"
+            android:paddingRight="@dimen/fragment_title_margin_lft_rgt"
+            android:text="@string/blank_welcome"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/blank_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView2"
+            android:gravity="center_horizontal"
+            android:paddingLeft="@dimen/fragment_title_margin_lft_rgt"
+            android:paddingRight="@dimen/fragment_title_margin_lft_rgt"
+            android:textSize="18sp" />
+
+    </RelativeLayout>
 </FrameLayout>
