--- a/mobile/src/main/res/layout/fragment_settings.xml
+++ b/mobile/src/main/res/layout/fragment_settings.xml
@@ -8,7 +8,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            style="@style/PreferenceCategory"
+            android:text="@string/settings_title_user"/>
 
+        <LinearLayout style="@style/LineSeparator" />
 
     </LinearLayout>
 </FrameLayout>
