--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -2,8 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="fab_elevation">5dp</dimen>
 
@@ -11,5 +13,7 @@
     <dimen name="fragment_title_margin_top">20dp</dimen>
     <dimen name="fragment_title_margin_btm">5dp</dimen>
     <dimen name="fragment_title_margin_lft_rgt">15dp</dimen>
+
     <dimen name="splash_logo_margin_lft_rgt">30dp</dimen>
+    <dimen name="settings_category">12sp</dimen>
 </resources>
