--- a/mobile/src/main/res/layout/fragment_settings.xml
+++ b/mobile/src/main/res/layout/fragment_settings.xml
@@ -10,9 +10,17 @@
 
         <TextView
             style="@style/PreferenceCategory"
-            android:text="@string/settings_title_user"/>
+            android:text="@string/settings_title_user" />
 
         <LinearLayout style="@style/LineSeparator" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+        </LinearLayout>
 
     </LinearLayout>
 </FrameLayout>
