--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -15,5 +15,9 @@
     <dimen name="fragment_title_margin_lft_rgt">15dp</dimen>
 
     <dimen name="splash_logo_margin_lft_rgt">30dp</dimen>
+
     <dimen name="settings_category">12sp</dimen>
+    <dimen name="settings_category_margin_btm">10sp</dimen>
+    <dimen name="settings_option_title">20sp</dimen>
+    <dimen name="settings_option_subtitle">14sp</dimen>
 </resources>
